# FileLockCPP

./: CMakeLists.txt  UI.cpp  UI.h  colorCodes.h  csv.cpp  csv.h  file_status.cpp  file_status.h  ini.cpp  ini.h  main.cpp  main.h
testDir/: FileLockCPP_Settings.ini
